--- a/css/about-enhanced.css
+++ b/css/about-enhanced.css
@@ -384,6 +384,9 @@
     padding-top: 2.5rem;
     text-align: center;
     width: 100%;
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 2rem;
     padding-right: 2rem;
 }
